--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5012",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "react": "^18.2.0",
